--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.4.1",
+    "react-swipeable": "^7.0.2",
     "react-toastify": "^11.0.5",
     "redux-persist": "^6.0.0"
   },
