--- a/client/package.json
+++ b/client/package.json
@@ -18,7 +18,8 @@
     "react-router-dom": "^7.4.1",
     "react-swipeable": "^7.0.2",
     "react-toastify": "^11.0.5",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "swiper": "^11.2.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
