Телеграм бот для уведомлений о записях

--- a/server/.env
+++ b/server/.env
@@ -4,3 +4,4 @@ CLOUDINARY_CLOUD_NAME=dcq9zzfdh
 CLOUDINARY_API_KEY=586623324751191
 CLOUDINARY_API_SECRET=r-JSab9lS3F8DpqNi9osZttgKUg
 JWT_SECRET=CLOUDINARY_URL=cloudinary://586623324751191:r-JSab9lS3F8DpqNi9osZttgKUg@dcq9zzfdh
+TELEGRAM_BOT_TOKEN=7554179456:AAGCvUtka-uLBfcOxgh8VupEYR__S8ZpvVI
