--- a/server/.env
+++ b/server/.env
@@ -5,3 +5,5 @@ CLOUDINARY_API_KEY=586623324751191
 CLOUDINARY_API_SECRET=r-JSab9lS3F8DpqNi9osZttgKUg
 JWT_SECRET=CLOUDINARY_URL=cloudinary://586623324751191:r-JSab9lS3F8DpqNi9osZttgKUg@dcq9zzfdh
 TELEGRAM_BOT_TOKEN=7554179456:AAGCvUtka-uLBfcOxgh8VupEYR__S8ZpvVI
+YOOKASSA_SHOP_ID=1080488
+YOOKASSA_SECRET_KEY=live_SvJ3kdKVlXhpdLYmWVJEjiQ1MOZFANppwFj-T-Ilb5k
