--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "axios": "^1.9.0",
     "bcryptjs": "^3.0.2",
     "cloudinary": "^2.6.0",
     "dotenv": "^16.5.0",
@@ -19,7 +20,8 @@
     "mongoose": "^8.13.1",
     "multer": "^1.4.5-lts.2",
     "node-cron": "^3.0.3",
-    "node-telegram-bot-api": "^0.66.0"
+    "node-telegram-bot-api": "^0.66.0",
+    "yookassa": "^0.1.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
