Интеграция HeyGen API и создание видео сториз по тексту с использованием цифрового аватара

--- a/server/.env
+++ b/server/.env
@@ -7,3 +7,4 @@ JWT_SECRET=CLOUDINARY_URL=cloudinary://586623324751191:r-JSab9lS3F8DpqNi9osZttgK
 TELEGRAM_BOT_TOKEN=7554179456:AAGCvUtka-uLBfcOxgh8VupEYR__S8ZpvVI
 YOOKASSA_SHOP_ID=1080488
 YOOKASSA_SECRET_KEY=live_SvJ3kdKVlXhpdLYmWVJEjiQ1MOZFANppwFj-T-Ilb5k
+HEYGEN_API_KEY=ODQ2ZjY0ZmI0MmRjNDhkOGEzNWM3NzEyYTY5MjVhNmQtMTc0NjA4NzI1MQ==
